# TTB-Label-Verification

./: .env.dev  .env.dev.example  .env.example  .env.prod.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh  post-start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  constants.py  main.py
backend/app/adapters/: __init__.py  base.py  litellm_adapter.py
backend/app/models/: __init__.py  label.py
backend/app/prompts/: extract_prompt.py  verify_prompt.py
backend/app/routes/: __init__.py  auth.py  batch.py  stress_test.py  verify.py
backend/app/services/: __init__.py  golden_samples.py  stress_test_generator.py  validation.py  verification.py
backend/scripts/: generate_batch_stress_test.py  generate_degraded_previews.py
backend/tests/: conftest.py  test_adapters.py  test_models.py  test_routes.py  test_stress_test_generator.py  test_validation.py  test_verification_service.py  test_verify_prompt.py
backend/tests/eval/: _golden_data.py  conftest.py  image_degradation.py  test_golden_samples.py
deploy/: README.md  nginx.conf
frontend/: Dockerfile  angular.json  jest.config.js  nginx.conf  package-lock.json  package.json  proxy.conf.js  tsconfig.json  tsconfig.spec.json
frontend/public/samples/: data.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/guards/: auth.guard.spec.ts
frontend/src/app/core/interceptors/: credentials.interceptor.ts
frontend/src/app/core/services/: api.service.ts  auth.service.ts  validation.service.spec.ts  validation.service.ts
frontend/src/app/features/batch/: batch.component.ts
frontend/src/app/features/login/: login.component.ts
frontend/src/app/features/stress-test/: stress-test.component.ts
frontend/src/app/features/verify/: verify.component.ts
frontend/src/app/models/: label.models.ts
frontend/src/app/shared/components/application-form/: application-form.component.spec.ts  application-form.component.ts
frontend/src/app/shared/components/batch-progress/: batch-progress.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
nginx/: nginx.conf
sample-data/batch/: labels.csv
(+9 files in other folders)
