[project]
name = "ttb-label-verification"
version = "0.1.0"
description = "TTB alcohol label verification backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "litellm>=1.50.0",
    "aiolimiter>=1.1.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
