[project]
name = "ttb-label-verification"
version = "0.1.0"
description = "TTB alcohol label verification backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "litellm>=1.50.0",
    "aiolimiter>=1.1.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    # Rasterizes the golden label SVGs to PNG for the /api/stress-test/run
    # endpoint (app/services/golden_samples.py). Needs the libcairo2 system
    # library — see backend/Dockerfile. Originally a dev-only test dependency;
    # promoted here once production code started calling it at runtime.
    "cairosvg>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: opt-in golden-sample evaluation tests that call the real vision model (slow, non-deterministic; requires Ollama running locally or a valid GEMINI_API_KEY). Run with `-m eval`.",
]
addopts = "-m 'not eval'"

[tool.coverage.run]
source = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
